tests/error/comptime/trivially_relocate_values3.bz
// error: destination address is null in call to '__builtin_trivially_relocate_values'
// note: while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		__builtin_trivially_relocate_values(null as ?*mut i32, null as ?*mut i32, 1);
	});
}
